Add content to pages and create contact form

--- a/muunna-frontend/src/App.css
+++ b/muunna-frontend/src/App.css
@@ -20,11 +20,14 @@ a {
 h1, h2, h3, h4 {
   font-family: 'Bowlby One SC', cursive;
 }
+
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
-  h1, h2, h3, h4 {
-    font-size: 1rem;
-  
+  h1, h2 {
+    font-size: 5vw;
+  }
+  h3, h4 {
+    font-size: 4vw;
   }
 }
 
