--- a/muunna-frontend/src/App.css
+++ b/muunna-frontend/src/App.css
@@ -31,6 +31,11 @@ h1, h2, h3, h4 {
   }
 }
 
+.iconsStyle {
+  color: grey;
+  margin-right: 5px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
