--- a/muunna-frontend/src/App.css
+++ b/muunna-frontend/src/App.css
@@ -36,6 +36,10 @@ h1, h2, h3, h4 {
   margin-right: 5px;
 }
 
+.contentStyle {
+  margin-top: '30px'
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
