--- a/muunna-frontend/src/App.css
+++ b/muunna-frontend/src/App.css
@@ -17,7 +17,7 @@ a {
   color: #4cdbc4;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5 {
   font-family: 'Bowlby One SC', cursive;
 }
 
@@ -29,6 +29,16 @@ h1, h2, h3, h4 {
   h3, h4 {
     font-size: 4vw;
   }
+  h5 {
+    font-size: 3vw;
+  }
+  .sidebarStyle {
+    margin-top: 20px;
+  }
+}
+
+.mb-5, .my-5 {
+  margin-bottom: 1rem!important;
 }
 
 .iconsStyle {
