--- a/muunna-frontend/src/App.css
+++ b/muunna-frontend/src/App.css
@@ -18,7 +18,22 @@ a {
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Bowlby One SC', cursive;
+  font-family: "Bowlby One SC";
+  letter-spacing: .025em;
+}
+
+.calculator {
+  background-color: #f5f5f5;
+  padding: 20px;
+  margin: 20px 0px 20px 0px;
+  border: 1px solid #b2d6d0;
+  border-radius: 5px;
+}
+
+p {
+  font-family: 'Open Sans',sans-serif;
+  color: #313030;
+  letter-spacing: .025em;
 }
 
 @media only screen and (max-width: 768px) {
