--- a/muunna-frontend/src/App.css
+++ b/muunna-frontend/src/App.css
@@ -18,7 +18,7 @@ a {
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: "Bowlby One SC";
+  font-family: 'Bowlby One SC', cursive;
   letter-spacing: .025em;
 }
 
